# django-mediastorage

./: .gitignore  README.md  pyproject.toml
django_mediastorage/: __init__.py
django_mediastorage/storage/: fields.py  inventory.py
django_mediastorage/views/: files.py  generator.py  http_forward_auth.py
tests/: test_http_forward_auth.py
